[gd_scene load_steps=6 format=3 uid="uid://cgcqug5547yn6"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_nskj4"]
[ext_resource type="PackedScene" uid="uid://dm0upigj3b7xc" path="res://scenes/player.tscn" id="2_hlh1u"]
[ext_resource type="Script" path="res://scenes/TileList.gd" id="2_jeqmf"]
[ext_resource type="PackedScene" uid="uid://ymxn60tq1sit" path="res://scenes/ball.tscn" id="4_d3gis"]
[ext_resource type="FontFile" uid="uid://dahtum0b7bvb5" path="res://ressources/font/FSEX300.ttf" id="5_vtxr7"]

[node name="Game" type="Node2D"]
script = ExtResource("1_nskj4")

[node name="TileList" type="Node2D" parent="."]
position = Vector2(230, 96)
script = ExtResource("2_jeqmf")

[node name="Player" parent="." instance=ExtResource("2_hlh1u")]
position = Vector2(208, 768)

[node name="Ball" parent="." instance=ExtResource("4_d3gis")]
position = Vector2(208, 748)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -207.0
offset_top = -64.0
offset_right = 207.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Left" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Launch" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Right" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.5
offset_top = -16.0
offset_right = 8.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="CanvasLayer2/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_vtxr7")
theme_override_font_sizes/font_size = 22
text = "Congratulation!
You have a lot of patience
Thanks you"
horizontal_alignment = 1

[connection signal="out" from="Ball" to="." method="_on_ball_out"]
[connection signal="button_down" from="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer/Left" to="Player" method="_on_left_button_down"]
[connection signal="button_up" from="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer/Left" to="Player" method="_on_left_button_up"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer/Launch" to="." method="_on_launch_pressed"]
[connection signal="button_down" from="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer/Right" to="Player" method="_on_right_button_down"]
[connection signal="button_up" from="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer/Right" to="Player" method="_on_right_button_up"]
